  - opus: new decoder plugin for the Opus codec
  - vorbis: skip 16 bit quantisation, provide float samples
  - mp4ff: obsolete plugin removed
* encoder:
  - opus: new encoder plugin for the Opus codec
  - vorbis: accept floating point input samples
* output:
  - new option "tags" may be used to disable sending tags to output
  - alsa: workaround for noise after manual song change
  - mvp: remove obsolete plugin
* improved decoder/output error reporting
* eliminate timer wakeup on idle MPD

ver 0.17.4 (2013/??/??)
* protocol:
  - allow to omit END in ranges (START:END)
  - don't emit IDLE_PLAYER before audio format is known
* decoder:
  - ffmpeg: support float planar audio (ffmpeg 1.1)
  - ffmpeg: fix AVFrame allocation
* player:
  - implement missing "idle" events on output errors
* clock: fix build failure

ver 0.17.3 (2013/01/06)
* output:
  - osx: fix pops during playback
  - recorder: fix I/O error check
  - shout: fix memory leak in error handler
  - recorder, shout: support Ogg packets that span more than one page
* decoder:
  - ffmpeg: ignore negative time stamps
  - ffmpeg: support planar audio
* playlist:
  - cue: fix memory leak
  - cue: fix CUE files with only one track

ver 0.17.2 (2012/09/30)
* protocol:
  - fix crash in local file check
* decoder:
  - fluidsynth: remove throttle (requires libfluidsynth 1.1)
  - fluidsynth: stop playback at end of file
  - fluidsynth: check MIDI file format while scanning
  - fluidsynth: add sample rate setting
  - wavpack: support all APEv2 tags
* output:
  - httpd: use monotonic clock, avoid hiccups after system clock adjustment
  - httpd: fix throttling bug after resuming playback
* playlist:
  - cue: map "PERFORMER" to "artist" or "album artist"
* mapper: fix non-UTF8 music directory name
* mapper: fix potential crash in file permission check
* playlist: fix use-after-free bug
* playlist: fix memory leak
* state_file: save song priorities
* player: disable cross-fading in "single" mode